<resources>
    <string name="app_name">Week1_0706011910022</string>
    <string name="list_user">List of Users</string>
    <string name="add_user">Add User</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="no_data">No Data</string>
    <string name="button_adduser">SAVE DATA</string>
    <string name="picprofile">Profile Picture</string>
    <string name="viewName">Name</string>
    <string name="loading">Loading...</string>
    <string name="view">view</string>
    <string name="vieww">Profile</string>
    <string name="edit">Edit</string>>
    <string name="detail">Detail</string>>
    <string name="delete">Delete</string>
    <string name="yearsold">years old</string>
</resources>
